; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/nfit/extr_core.c_acpi_nfit_uc_error_notify.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/nfit/extr_core.c_acpi_nfit_uc_error_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.acpi_nfit_desc = type { i64 }

@HW_ERROR_SCRUB_ON = common dso_local global i64 0, align 8
@ARS_REQ_LONG = common dso_local global i32 0, align 4
@ARS_REQ_SHORT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*, i32)* @acpi_nfit_uc_error_notify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @acpi_nfit_uc_error_notify(%struct.device* %0, i32 %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.acpi_nfit_desc*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.device*, %struct.device** %3, align 8
  %7 = call %struct.acpi_nfit_desc* @dev_get_drvdata(%struct.device* %6)
  store %struct.acpi_nfit_desc* %7, %struct.acpi_nfit_desc** %5, align 8
  %8 = load %struct.acpi_nfit_desc*, %struct.acpi_nfit_desc** %5, align 8
  %9 = getelementptr inbounds %struct.acpi_nfit_desc, %struct.acpi_nfit_desc* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @HW_ERROR_SCRUB_ON, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %17

13:                                               ; preds = %2
  %14 = load %struct.acpi_nfit_desc*, %struct.acpi_nfit_desc** %5, align 8
  %15 = load i32, i32* @ARS_REQ_LONG, align 4
  %16 = call i32 @acpi_nfit_ars_rescan(%struct.acpi_nfit_desc* %14, i32 %15)
  br label %21

17:                                               ; preds = %2
  %18 = load %struct.acpi_nfit_desc*, %struct.acpi_nfit_desc** %5, align 8
  %19 = load i32, i32* @ARS_REQ_SHORT, align 4
  %20 = call i32 @acpi_nfit_ars_rescan(%struct.acpi_nfit_desc* %18, i32 %19)
  br label %21

21:                                               ; preds = %17, %13
  ret void
}

declare dso_local %struct.acpi_nfit_desc* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @acpi_nfit_ars_rescan(%struct.acpi_nfit_desc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
